[package]
name = "w4-tiny-decomp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bitfiddle = { path = "../tiny-bitfiddle", default-features = false }
w4-pnger-common = { path = "../w4-pnger-common" }